--- a/src/main/resources/templates/manage.html
+++ b/src/main/resources/templates/manage.html
@@ -8,6 +8,12 @@
         <div>
             <div>
                 <h1>Manage</h1>
+                <form>
+                    <p>upload file</p>
+                    <input type="file" name="file">
+                    <br>
+                    <input type="submit" value="submit">
+                </form>
             </div>
         </div>
     </body>
