--- a/src/main/resources/templates/manage.html
+++ b/src/main/resources/templates/manage.html
@@ -6,12 +6,11 @@
     </head>
     <body>
         <div>
-            <div>
+            <div align="center">
                 <h1>Manage</h1>
-                <form>
-                    <p>upload file</p>
+                <form action="file/upload" method="post" enctype="multipart/form-data">
+                    <h3>upload file</h3>
                     <input type="file" name="file">
-                    <br>
                     <input type="submit" value="submit">
                 </form>
             </div>
