--- a/src/main/resources/templates/manage.html
+++ b/src/main/resources/templates/manage.html
@@ -8,7 +8,7 @@
         <div>
             <div align="center">
                 <h1>Manage</h1>
-                <form action="file/upload" method="post" enctype="multipart/form-data">
+                <form action="uploadToDB" method="post" enctype="multipart/form-data">
                     <h3>upload file</h3>
                     <input type="file" name="file">
                     <input type="submit" value="submit">
